# src/Features/Access/UserIdentity/Infrastructure/Driver/Rest/UserIdentityDeleteController.php
@@ -35,7 +35,7 @@ class UserIdentityDeleteController
     ) {
     }
     #[OA\Delete(
-        path: "/api/access/user-identities/{uid}",
+        path: "/api/access/identity/{uid}",
         tags: ["User identity"],
         description: "Delete the record",
         parameters: [
@@ -80,10 +80,10 @@ class UserIdentityDeleteController
                 uids: isset($params['uid']) ? [$params['uid']] : (isset($params['uids']) ? explode(',', $params['uids']) : null),
                 search: $params['search'] ?? null,
                 user: isset($params['user']) ? new UserRef($params['user']) : null,
-                relyingParty: isset($params['relying-party']) ? new RelyingPartyRef($params['relying-party']) : null,
-                trustedClient: isset($params['trusted-client']) ? new TrustedClientRef($params['trusted-client']) : null,
                 users: isset($params['users']) ? explode(",", $params['users']) : null,
+                relyingParty: isset($params['relying-party']) ? new RelyingPartyRef($params['relying-party']) : null,
                 relyingPartys: isset($params['relying-partys']) ? explode(",", $params['relying-partys']) : null,
+                trustedClient: isset($params['trusted-client']) ? new TrustedClientRef($params['trusted-client']) : null,
                 trustedClients: isset($params['trusted-clients']) ? explode(",", $params['trusted-clients']) : null,
             );
             $res = $this->runner->run(UserIdentityTaskDelete::class, ['filter' => $filter]);
